# nimbus

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  LICENSE  README.md  pyproject.toml  readme.md
.github/workflows/: publish.yaml  test.yaml
docs/: config.example.yaml
docs/examples/: config.yaml  report.txt
src/nas/: cli.py  config.py  log.py  main.py
src/nas/cli/: adapters.py  parser.py  runner.py
src/nas/cmd/: __init__.py  abstract.py  backup.py  deploy.py  deployment.py  factory.py  snapshot.py
src/nas/command/: __init__.py  abstract.py  backup.py  deploy.py  deployment.py
src/nas/core/: archiver.py  provider.py  runner.py  secrets.py  service.py  uploader.py
src/nas/factory/: builder.py  command.py  component.py  report.py  secrets.py  service.py
src/nas/operation/: __init__.py  backup.py
src/nas/provider/: abstract.py  backup.py  secrets.py  service.py
src/nas/report/: __init__.py  format.py  formatter.py  pretty.py  report.py  reporter.py  writer.py
src/nas/utils/: config.py  log.py  timer.py
src/nimbus/: config.py  log.py  main.py
src/nimbus/cli/: __init__.py  factory.py  parser.py  runner.py
src/nimbus/cmd/: __init__.py  abstract.py  backup.py  command.py  deploy.py  factory.py
src/nimbus/core/: __init__.py  archiver.py  runner.py  service.py  uploader.py
src/nimbus/factory/: command.py  component.py  notification.py  report.py  service.py
src/nimbus/notification/: abstract.py  discord.py  notifier.py
src/nimbus/notify/: __init__.py  discord.py  factory.py
src/nimbus/provider/: __init__.py  abstract.py  backup.py  directory.py  resource.py  secrets.py  service.py
src/nimbus/report/: __init__.py  factory.py  format.py  reporter.py  writer.py
src/nimbuscli/: config.py  log.py  main.py
src/nimbuscli/cli/: __init__.py  factory.py  parser.py  runner.py
src/nimbuscli/cmd/: __init__.py  backup.py  deploy.py  factory.py
src/nimbuscli/config/: __init__.py  config.py  schema.py
src/nimbuscli/core/: __init__.py  archiver.py  service.py  uploader.py
src/nimbuscli/core/archive/: __init__.py  archiver.py  rar.py  tar.py  zip.py
src/nimbuscli/core/deploy/: __init__.py  docker.py  service.py
src/nimbuscli/core/execute/: __init__.py  process.py  runner.py
src/nimbuscli/core/upload/: __init__.py  aws.py  uploader.py
src/nimbuscli/notify/: __init__.py  discord.py  factory.py  notifier.py
src/nimbuscli/provider/: __init__.py  directory.py  service.py
src/nimbuscli/report/: __init__.py  factory.py  format.py  reporter.py  writer.py
tests/: conftest.py  helpers.py  test_config.py
tests/config/: test_config.py  test_schema.py
tests/config/test_schema/: complete.json  complete.yaml  minconfig.json  minconfig.yaml
tests/config/test_schema/commands/: complete.json  complete.yaml  complete_min.json  complete_min.yaml  no_backup.yaml  no_deploy.yaml
tests/config/test_schema/commands/backup/: no_archive.yaml  no_upload.json  no_upload.yaml
tests/config/test_schema/commands/deploy/: complete.json  complete.yaml  complete_min.json  complete_min.yaml
tests/config/test_schema/observability/: all_sections.yaml  all_sections_complete.yaml  complete.json  complete_min.json  no_notifications.json  no_notifications.yaml  without_discord_hook.yaml  without_reports.json
tests/config/test_schema/observability/logs/: empty.yaml  (+4 more)
tests/config/test_schema/profiles/: complete.json  no_archive.json  no_archive.yaml  no_upload.json  no_upload.yaml
tests/core/: test_archiver.py  test_runner.py  test_service.py  test_uploader.py
tests/core/archive/: test_archiver.py  test_rar.py  test_tar.py  test_zip.py
tests/core/deploy/: test_docker.py  test_service.py
tests/core/execute/: test_process.py  test_runner.py
tests/core/upload/: test_aws.py  test_uploader.py
tests/notify/: test_discord.py  test_factory.py  test_notifier.py
tests/provider/: test_abstract.py  test_backup.py  test_directory.py  test_resource.py  test_secret.py  test_secrets.py  test_service.py
tests/report/: test_format.py  test_formatter.py
tests/utils/: test_format.py
(+20 files in other folders)
